<resources>
    <string name="app_name">Adelanto_Pantallas</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="Confirmar">Confirmar</string>
    <string name="previous">Previous</string>
    <string name="Email">Email:</string>
    <string name="Nombre">Nombre:</string>
    <string name="Volver">Volver:</string>
    <string name="Telefono">Telefono:</string>
    <string name="Si">SI:</string>
    <string name="No">NO:</string>
    <String name="Masculino">Masculino:</String>
    <string name="Femenino">Femenino:</string>
    <String name="Direccion">Direccion:</String>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>